<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/main_menu_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnLocalization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_localization" />

    <Button
        android:id="@+id/btnUpdateLocalEnvironments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_local_environments" />

    <Button
        android:id="@+id/btnDeviceInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_info" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

</LinearLayout>
